syntax = "proto3";

package protobuf;
option go_package = "./protobuf";
import "proto/Message.proto";

option java_multiple_files = true;
option java_package = "com.joxrays.godroidsvr.resolver";
option java_outer_classname = "MediaStoreResolverEntry";

service MediaStoreResolver {
  rpc GetMediaFilesInfo(MediaType) returns (MediaStoreInfoList) {}
  rpc GetMediaFileThumbnail(String) returns (stream Bytes) {}
  rpc DeleteMediaFile(String) returns (Empty) {}
  rpc DownloadMediaFile(String) returns (stream Bytes){}
}