syntax = "proto3";

package protobuf;
option go_package = "./protobuf";
import "proto/Message.proto";

option java_multiple_files = true;
option java_package = "com.joxrays.godroidsvr.resolver";
option java_outer_classname = "PhoneResolverEntry";

service PhoneResolver {
  rpc DialPhone(String) returns (Empty) {}
  rpc CallPhone(String) returns (Empty) {}
}
